fix overlapping text in mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -47,11 +47,11 @@
   text-rendering: optimizeLegibility;
 }
 ::-moz-selection {
-color: white
+  color: white
 }
 
 ::selection {
-color: white;
+  color: white;
 }
 
 ::-moz-selection {
@@ -59,16 +59,16 @@ background: black;
 }
 
 ::selection {
-background: red;
+    background: red;
 }
 
 img {
-width: 30%;
-display: block;
-margin: 50px;
-margin-right:auto;
-margin-left:auto;
-opacity: 100%;
+  width: 30%;
+  display: block;
+  margin: 50px;
+  margin-right:auto;
+  margin-left:auto;
+  opacity: 100%;
 }
 
 .img-background {
@@ -82,47 +82,47 @@ opacity: 100%;
 }
 
 .bg-mob {
-display: none;
+  display: none;
 }
 
 body {
-background-color: #e9e9e9;
-margin: 0;
-padding: 0;
-overflow: hidden;
-cursor: crosshair;
-font-family: 'rois';
-height: 100vh;
-width: 100vw;
+  background-color: #e9e9e9;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  cursor: crosshair;
+  font-family: 'rois';
+  height: 100vh;
+  width: 100vw;
 }
 
 
 h1 {
-font-size: 6vw;
-line-height: 0.5;
-font-family: 'rois';
-text-transform: uppercase;
-background-color: rgb(255, 253, 253, .8) ;
-left: auto;
-box-shadow: 0px 0px 10px black;
-text-align: justify;
-display: block;
+  font-size: 6vw;
+  line-height: 0.5;
+  font-family: 'rois';
+  text-transform: uppercase;
+  background-color: rgb(255, 253, 253, .8) ;
+  left: auto;
+  box-shadow: 0px 0px 10px black;
+  text-align: justify;
+  display: block;
 }
 
 a {
-color: black;
-text-decoration: none;
-text-shadow: 0px 0px 5px white;
-filter: blur(0px);
-cursor: pointer;
+  color: black;
+  text-decoration: none;
+  text-shadow: 0px 0px 5px white;
+  filter: blur(0px);
+  cursor: pointer;
 }
 
 a:hover {
-color: black;
-text-decoration: none;
-text-shadow: 0px 0px 15px white;
-filter: blur(0px);
-cursor: pointer;
+  color: black;
+  text-decoration: none;
+  text-shadow: 0px 0px 15px white;
+  filter: blur(0px);
+  cursor: pointer;
 }
 
 .main {
@@ -132,31 +132,31 @@ cursor: pointer;
 }
 
 .menu {
-position: relative;
-top: 0%;
-left: 0%;
-font-size: 30px;
-z-index: 10;
-margin: 10px;
-overflow: scroll;
-transition: 6s;
-box-shadow: 0px 0px 100px white;
+  position: relative;
+  top: 0%;
+  left: 0%;
+  font-size: 30px;
+  z-index: 10;
+  margin: 10px;
+  overflow: scroll;
+  transition: 6s;
+  box-shadow: 0px 0px 100px white;
 }
 
 .box{
-position: absolute;
-align-items: center;
-justify-content: center;
-left: 100px;
-top: 50px;
-z-index: 1000;
-width: 85%;
-height: 94%;
-background: blue;
-background: linear-gradient(90deg, rgb(145, 143, 59) 50%, rgb(171, 170, 74) 80%, rgb(123, 125, 44) 80%);
-opacity: 95%;
-overflow: scroll;
-box-shadow: 0px 0px 10px black;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  left: 100px;
+  top: 50px;
+  z-index: 1000;
+  width: 85%;
+  height: 94%;
+  background: blue;
+  background: linear-gradient(90deg, rgb(145, 143, 59) 50%, rgb(171, 170, 74) 80%, rgb(123, 125, 44) 80%);
+  opacity: 95%;
+  overflow: scroll;
+  box-shadow: 0px 0px 10px black;
 }
 
 .contactBox{
@@ -165,7 +165,7 @@ box-shadow: 0px 0px 10px black;
   justify-content: center;
   top: 40%;
   width: 80%;
-  height:25%;
+  height: 35%;
   background: blue;
   background: linear-gradient(90deg, rgb(145, 143, 59) 50%, rgb(171, 170, 74) 80%, rgb(123, 125, 44) 80%);
   opacity: 95%;
@@ -183,114 +183,114 @@ filter: blur(0px);
 }
 
 .music {
-position: relative;
-margin: 30px;
-font-size: 10px;
-background-color: #F5F5F5;
-line-break: anywhere;
-word-break: normal;
-overflow: hidden;
-white-space: nowrap;
-text-overflow: ellipsis;
-font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
-font-weight: 100;
-box-shadow: 5px 5px 10px black;
-margin-left:400px;
-margin-right:250px;
+  position: relative;
+  margin: 30px;
+  font-size: 10px;
+  background-color: #F5F5F5;
+  line-break: anywhere;
+  word-break: normal;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+  font-weight: 100;
+  box-shadow: 5px 5px 10px black;
+  margin-left:400px;
+  margin-right:250px;
 }
 
 .video {
-box-shadow: 5px 5px 10px black;
-margin: 30px;
-margin-left:400px;
-margin-right:250px;
-width: 700;
-height: 500;
-background-color: black;
+  box-shadow: 5px 5px 10px black;
+  margin: 30px;
+  margin-left:400px;
+  margin-right:250px;
+  width: 700;
+  height: 500;
+  background-color: black;
 }
 
 .hide1 {
-position: fixed;
-display: inline-block;
-top: 95.5%;
-left: 10%;
-transform: translate(-50%, -50%);
-cursor: pointer;
-text-shadow: 0px 0px 5px black;
-cursor: pointer;
-font-size: 2vw;
+  position: fixed;
+  display: inline-block;
+  top: 95.5%;
+  left: 10%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  text-shadow: 0px 0px 5px black;
+  cursor: pointer;
+  font-size: 2vw;
 }
 
 .hide1:hover {
-color: black;
-text-decoration: none;
-text-shadow: 0px 0px 10px white;
-filter: blur(0px);
-cursor: pointer;
+  color: black;
+  text-decoration: none;
+  text-shadow: 0px 0px 10px white;
+  filter: blur(0px);
+  cursor: pointer;
 }
 
 .text-header {
-position: relative;
-padding: 0px;
-margin-left:6px;
-margin-right:6px;
-line-height: 1.4;
-font-size: 1.5vw;
-text-align: justify;
-top: -20px;
+  position: relative;
+  padding: 0px;
+  margin-left:6px;
+  margin-right:6px;
+  line-height: 1.4;
+  font-size: 1.5vw;
+  text-align: justify;
+  top: -20px;
 }
 
 .text-title {
-position: relative;
-padding: 0px;
-margin-left:6px;
-margin-right:6px;
-font-size: 1.5vw;
-text-align: justify;
-color: black;
+  position: relative;
+  padding: 0px;
+  margin-left:6px;
+  margin-right:6px;
+  font-size: 1.5vw;
+  text-align: justify;
+  color: black;
 }
 
 .text-body {
-position: relative;
-top: -10px;
-padding: 0px;
-margin-left:400px;
-margin-right:250px;
-font-size: 1vw;
-text-align: justify;
-color: white;
-line-height: 1;
+  position: relative;
+  top: -10px;
+  padding: 0px;
+  margin-left:400px;
+  margin-right:250px;
+  font-size: 1vw;
+  text-align: justify;
+  color: white;
+  line-height: 1;
 }
 
 .logo {
-width: 50%;
-position: absolute;
-opacity: .25;
+  width: 50%;
+  position: absolute;
+  opacity: .25;
 }
 
 .logo:hover {
-opacity: .9;
-transform: scale(1.1);
-transition: 1s;
+  opacity: .9;
+  transform: scale(1.1);
+  transition: 1s;
 }
 
 .video-background {
-position: fixed;
-background-color: red;
-background: black;
-opacity: 0.5;
-top: 0; right: 0; bottom: 0; left: 0;
-z-index: -99;
-transition: 1s;
+  position: fixed;
+  background-color: red;
+  background: black;
+  opacity: 0.5;
+  top: 0; right: 0; bottom: 0; left: 0;
+  z-index: -99;
+  transition: 1s;
 }
 
 .video-foreground,
 .video-background iframe {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 1000px) {
@@ -331,8 +331,8 @@ h1 {
 }
 
 .hide1 {
-    font-size: 4vw;
-    color: #02F702;
+  font-size: 4vw;
+  color: #02F702;
 }
 
 .logo {
